--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,15 @@
-{{ content }}
+<html>
+  <head>
+    <link
+      rel="stylesheet"
+      as="style"
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.7/dist/web/variable/pretendardvariable-dynamic-subset.css"
+    />
+    <link href="/assets/styles/main.css" rel="stylesheet" type="text/css" />
+    <script src="/assets/scripts/main.js" async defer></script>
+  </head>
+  <body>
+    {{ content }}
+  </body>
+</html>
