--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -20,8 +20,7 @@ layout: default
   {% endif %}
 {% endif %}
 
-
-<main class="w-full min-h-full overflow-hidden">
+<main class="w-full min-h-full">
   <section id="sidebar" class="block bg-gray-100 w-[320px] h-full px-6 py-12 fixed top-0 left-0 transform transition-transform ease-in-out duration-500 translate-x-[-320px] md:translate-x-0">
     <div class="rounded-full bg-gradient-to-br from-blue-500 to-purple-500 w-[120px] h-[120px]"></div>
     <h1 class="mt-12 font-bold text-2xl">{{ site.name }}</h1>
@@ -41,7 +40,7 @@ layout: default
           <svg
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 512 512"
-            class="w-5 h-5 mr-3 fill-gray-600"><path d="M40 48C26.7 48 16 58.7 16 72v48c0 13.3 10.7 24 24 24H88c13.3 0 24-10.7 24-24V72c0-13.3-10.7-24-24-24H40zM192 64c-17.7 0-32 14.3-32 32s14.3 32 32 32H480c17.7 0 32-14.3 32-32s-14.3-32-32-32H192zm0 160c-17.7 0-32 14.3-32 32s14.3 32 32 32H480c17.7 0 32-14.3 32-32s-14.3-32-32-32H192zm0 160c-17.7 0-32 14.3-32 32s14.3 32 32 32H480c17.7 0 32-14.3 32-32s-14.3-32-32-32H192zM16 232v48c0 13.3 10.7 24 24 24H88c13.3 0 24-10.7 24-24V232c0-13.3-10.7-24-24-24H40c-13.3 0-24 10.7-24 24zM40 368c-13.3 0-24 10.7-24 24v48c0 13.3 10.7 24 24 24H88c13.3 0 24-10.7 24-24V392c0-13.3-10.7-24-24-24H40z" /></svg>
+            class="w-5 h-5 mr-3 fill-gray-600"><path d="M0 96C0 60.7 28.7 32 64 32H196.1c19.1 0 37.4 7.6 50.9 21.1L289.9 96H448c35.3 0 64 28.7 64 64V416c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V96zM64 80c-8.8 0-16 7.2-16 16V416c0 8.8 7.2 16 16 16H448c8.8 0 16-7.2 16-16V160c0-8.8-7.2-16-16-16H286.6c-10.6 0-20.8-4.2-28.3-11.7L213.1 87c-4.5-4.5-10.6-7-17-7H64z" /></svg>
           <p class="text-gray-600">Categories</p>
         </a>
       </li>
@@ -57,24 +56,6 @@ layout: default
     </ul>
   </section>
   <section id="main" class="flex-1 transform transition-transform ease-in-out duration-500 translate-x-0 md:ml-[320px]">
-    <header class="w-full flex items-center p-6">
-      <div class="flex-1 flex justify-start items-center">
-        <p class="hidden md:block text-gray-600">Home</p>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 448 512"
-          id="sidebar-toggle"
-          class="block md:hidden w-5 h-5 cursor-pointer">
-          <path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z" />
-        </svg>
-      </div>
-      <div class="flex-1 flex justify-center items-center md:hidden">
-        {{ site.name }}
-      </div>
-      <div class="flex-1 flex justify-end items-center">
-        {% include search.html %}
-      </div>
-    </header>
-    <div>{{ content }}</div>
+    <div class="container mx-auto">{{ content }}</div>
   </section>
 </main>
