--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@ layout: page
   <div class="px-6">
     {% assign notes = site.notes | sort: 'date' | reverse %}
     {% for note in notes %}
-      {% assign url = note.url | replace: 'index.html', '' %}
+      {% assign url = note.url %}
       <a href="{{ url }}" class="block mt-3 border border-gray-200 rounded-md p-6 hover:bg-gray-200">
         <h2 class="text-xl font-semibold">{{ note.title }}</h2>
         <p class="mt-2 leading-normal line-clamp-2 text-gray-400">
