--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -22,8 +22,12 @@ layout: default
 
 <main class="w-full min-h-full">
   <section id="sidebar" class="block bg-gray-100 w-[320px] h-full px-6 py-12 fixed top-0 left-0 transform transition-transform ease-in-out duration-500 translate-x-[-320px] md:translate-x-0">
-    <div class="rounded-full bg-gradient-to-br from-blue-500 to-purple-500 w-[120px] h-[120px]"></div>
-    <h1 class="mt-12 font-bold text-2xl">{{ site.name }}</h1>
+    <a href="/">
+      <div class="rounded-full bg-gradient-to-br from-blue-500 to-purple-500 w-[120px] h-[120px]"></div>
+    </a>
+    <a href="/">
+      <h1 class="mt-12 font-bold text-2xl">{{ site.name }}</h1>
+    </a>
     <p class="mt-3 text-gray-600">{{ site.description }}</p>
     <ul class="mt-12">
       <li class="p-3 rounded-lg {{ current_home }}">
@@ -45,7 +49,7 @@ layout: default
         </a>
       </li>
       <li class="p-3 rounded-lg {{ current_tags }}">
-        <a href="/tags" class="flex items-center">
+        <a href="/about" class="flex items-center">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 512 512"
