--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,13 +26,7 @@
     {% else %}
       <p class="hidden md:block text-gray-600">{{ include.type }}</p>
     {% endif %}
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      viewBox="0 0 448 512"
-      id="sidebar-toggle"
-      class="block md:hidden w-5 h-5 cursor-pointer">
-      <path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z" />
-    </svg>
+    <i class="fa-solid fa-bars block md:hidden w-5 h-5 cursor-pointer" id="sidebar-toggle"></i>
   </div>
   <div class="flex-1 flex justify-center items-center md:hidden">
     {{ site.name }}
